@@ -159,18 +159,19 @@ static gint	calculate_real_tab_width 		(GtkSourceView     *view,
 							 guint              tab_size,
 							 gchar              c);
 
-static void	gtk_source_view_set_property 		(GObject                 *object,
-							 guint                    prop_id,
-							 const GValue            *value,
-							 GParamSpec              *pspec);
-static void	gtk_source_view_get_property		(GObject                 *object,
-							 guint                    prop_id,
-							 GValue                  *value,
-							 GParamSpec              *pspec);
+static void	gtk_source_view_set_property 		(GObject           *object,
+							 guint              prop_id,
+							 const GValue      *value,
+							 GParamSpec        *pspec);
+static void	gtk_source_view_get_property		(GObject           *object,
+							 guint              prop_id,
+							 GValue            *value,
+							 GParamSpec        *pspec);
 
-static void     gtk_source_view_style_set               (GtkWidget               *widget,
-							 GtkStyle                *previous_style);
+static void     gtk_source_view_style_set               (GtkWidget         *widget,
+							 GtkStyle          *previous_style);
 
+static void	gtk_source_view_grab_focus		(GtkWidget         *widget);
 
 /* Private functions. */
 static void
@@ -192,7 +193,8 @@ gtk_source_view_class_init (GtkSourceViewClass *klass)
 	
 	widget_class->expose_event = gtk_source_view_expose;
 	widget_class->style_set = gtk_source_view_style_set;
-	
+	widget_class->grab_focus = gtk_source_view_grab_focus;
+
 	textview_class->populate_popup = gtk_source_view_populate_popup;
 	textview_class->move_cursor = gtk_source_view_move_cursor;
 	
@@ -1880,5 +1882,23 @@ gtk_source_view_style_set (GtkWidget *widget, GtkStyle *previous_style)
 		/* make sure the margin width is recalculated on next expose */
 		view->priv->cached_margin_width = -1;
 	}
+}
+
+/* This is a workaround for bug #81893.
+ * We skip the parent class' grab_focus method in order to avoid the weird 
+ * scroll on focus behavior of GtkTextView.
+ * The GtkTextView grab_focus method first calls the parent class' 
+ * grab_focus method and then scrolls to cursor if disable_scroll_on_focus is
+ * FALSE.
+ * We will remove this workaround when bug #81893 will be fixed.
+ */
+static void
+gtk_source_view_grab_focus (GtkWidget *widget)
+{
+  GtkTextView *text_view;
+
+  text_view = GTK_TEXT_VIEW (widget);
+  
+  GTK_WIDGET_CLASS (g_type_class_peek_parent (parent_class))->grab_focus (widget);
 }
 
