@@ -1,3 +1,10 @@
+2003-05-13  Paolo Maggi  <paolo.maggi@polito.it>
+
+	Workaround for bug #81893
+
+	* gtksourceview/gtksourceview.c (gtk_source_view_grab_focus): 
+	new function
+
 2003-05-13  Michael Terry  <mterry@fastmail.fm>
 
 	* Makefile.am, configure.in, gtksourceview-1.0.pc.in,
